# sdfrust

./: .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: python.yml  rust.yml
benches/: mol2_parse_benchmark.rs  roundtrip_benchmark.rs  sdf_parse_benchmark.rs
examples/: basic_usage.rs  benchmark.rs  parse_molecules.rs
sdfrust-python/: Cargo.toml  README.md  pyproject.toml
sdfrust-python/examples/: README.md
sdfrust-python/python/sdfrust/: __init__.py
sdfrust-python/src/: error.rs  iterators.rs  lib.rs  molecule.rs  parsing.rs  writing.rs
sdfrust-python/tests/: test_basic.py  test_ml_validation.py
src/: atom.rs  bond.rs  collection.rs  error.rs  lib.rs  molecule.rs
src/descriptors/: aromaticity.rs  elements.rs  gasteiger.rs  hybridization.rs  mod.rs  topological.rs
src/featurize/: ogb.rs
src/fingerprints/: ecfp.rs
src/geometry/: distance.rs  mod.rs
src/parser/: mod.rs  mol2.rs  sdf.rs  sdf_v3000.rs  xyz.rs
src/writer/: mod.rs
tests/: descriptor_tests.rs  edge_case_tests.rs  geometry_tests.rs  mol2_tests.rs  pdbbind_benchmark.rs  pubchem_tests.rs  sdf_parsing_tests.rs
