[workspace]
members = [".", "sdfrust-python"]
resolver = "2"

[package]
name = "sdfrust"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Hosein Fooladi"]
description = "A fast, pure-Rust parser for SDF and MOL2 chemical structure files"
license = "MIT"
repository = "https://github.com/hfooladi/sdfrust"
keywords = ["chemistry", "sdf", "mol2", "cheminformatics", "parsing"]
categories = ["science", "parser-implementations"]

[dependencies]
thiserror = "2.0"
nalgebra = { version = "0.34", optional = true }
flate2 = { version = "1.0", optional = true }

[features]
default = []
geometry = ["nalgebra"]
gzip = ["flate2"]

[dev-dependencies]
tempfile = "3.14"
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.10"

[[bench]]
name = "sdf_parse_benchmark"
harness = false

[[bench]]
name = "mol2_parse_benchmark"
harness = false

[[bench]]
name = "roundtrip_benchmark"
harness = false
