[package]
name = "sdfrust-python"
version = "0.4.0"
edition = "2021"
rust-version = "1.70"
authors = ["Hosein Fooladi"]
description = "Python bindings for sdfrust - a fast SDF and MOL2 parser"
license = "MIT"
repository = "https://github.com/hfooladi/sdfrust"
publish = false

[lib]
name = "_sdfrust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
sdfrust = { path = ".." }
numpy = { version = "0.23", optional = true }

[features]
default = ["numpy"]
numpy = ["dep:numpy"]
